2005-11-10  Paolo Carlini  <pcarlini@suse.de>

	* include/tr1/boost_shared_ptr.h (_Sp_counted_base::release,
	weak_release): Protect barriers with __GTHREADS.

2005-11-10  Paolo Carlini  <pcarlini@suse.de>
	    Peter Dimov  <pdimov@mmltd.net>

	* include/tr1/boost_shared_ptr.h (_Sp_counted_base::release):
	Optimize by manually inlining weak_release.

	* include/tr1/boost_shared_ptr.h (_Sp_counted_base::release,
	weak_release): Use explicit memory barriers.

2005-11-09  Benjamin Kosnik  <bkoz@redhat.com>
	    Paolo Carlini  <pcarlini@suse.de>
            Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR libstdc++/22203
	* numeric_limits.cc: Split into...
	* numeric_limits/specialization.cc: ..this.
	* numeric_limits/is_iec559.cc: Same.
	* numeric_limits/sign.cc: Same.
	* numeric_limits/quiet_NaN.cc: Same.
	* numeric_limits/digits10.cc: Same.
	* numeric_limits/denorm_min.cc: Same.
	* numeric_limits/min_max.cc: Same.
	* numeric_limits/epsilon.cc: Same.
	* numeric_limits/infinity.cc: Same.
	* numeric_limits/traps.cc: New.

2005-11-09  Paolo Carlini  <pcarlini@suse.de>

	* include/tr1/boost_shared_ptr.h: Trivial formatting fixes.

2005-11-08  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/lib/libstdc++.exp (check_v3_target_debug_mode): Use
	exe as the executable extension.

	* acinclude.m4 (GLIBCXX_ENABLE_ALLOCATOR): Change gnu defaults to
	new.
	(GLIBCXX_ENABLE_PCH): Adjust message order.
	* configure: Regenerate.
	
	* scripts/testsuite_flags.in (query): Correct print_usagex typo.

	* include/bits/functexcept.h: Remove argument names.

	* src/mt_allocator.cc: Adjust comment.
	
2005-11-06  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/18174
	* include/bits/stl_queue.h (priority_queue): Tweak a bit the
	comment describing the container.

2005-11-05  Paolo Carlini  <pcarlini@suse.de>

	* configure.host: Add | rs6000 to the cpu_defines_dir switch,
	consistently with the try_cpu one.

2005-11-05  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/22203