@@ -1,5 +1,14 @@
 2005-11-10  Paolo Carlini  <pcarlini@suse.de>
 
+	* testsuite/tr1/2_general_utilities/memory/
+	enable_shared_from_this/not_shared.cc: Adjust, remove xfail.
+	* testsuite/tr1/2_general_utilities/memory/
+	enable_shared_from_this/not_shared2.cc: Likewise.
+	* testsuite/tr1/2_general_utilities/memory/
+	enable_shared_from_this/not_shared3.cc: Likewise.
+
+2005-11-10  Paolo Carlini  <pcarlini@suse.de>
+
 	* include/tr1/boost_shared_ptr.h (_Sp_counted_base::release,
 	weak_release): Protect barriers with __GTHREADS.
 
